<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera_control">

    <fragment
        android:id="@+id/navigation_camera_control"
        android:name="com.example.ptzcameracontroller.ui.control.CameraControlFragment"
        android:label="@string/nav_camera_control"
        tools:layout="@layout/fragment_camera_control" />

    <fragment
        android:id="@+id/navigation_video_stream"
        android:name="com.example.ptzcameracontroller.ui.stream.VideoStreamFragment"
        android:label="@string/nav_video_stream"
        tools:layout="@layout/fragment_video_stream" />

    <fragment
        android:id="@+id/navigation_connection"
        android:name="com.example.ptzcameracontroller.ui.connection.ConnectionFragment"
        android:label="@string/nav_connection"
        tools:layout="@layout/fragment_connection" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ptzcameracontroller.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>